--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "illuminate/support": "^12.0",
         "lastdino/approval-flow": "^0.1",
         "tuncaybahadir/quar": "^1.7",
-        "lastdino/chrome-laravel": "^0.1"
+        "lastdino/chrome-laravel": "^0.1",
+        "spatie/laravel-medialibrary": "^11.0"
     },
     "minimum-stability": "stable",
     "prefer-stable": true
