--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "lastdino/approval-flow": "^0.1",
         "tuncaybahadir/quar": "^1.7",
         "lastdino/chrome-laravel": "^0.1",
-        "spatie/laravel-medialibrary": "^11.0"
+        "spatie/laravel-medialibrary": "^11.0",
+        "phpoffice/phpspreadsheet": "^5.0"
     },
     "minimum-stability": "stable",
     "prefer-stable": true
